# qtsowrap

./: .gitignore  CMakeLists.txt  README.md  gen.py
.github/workflows/: check_generation.yml
include/fontconfig/: fcfreetype.h
include/freetype/: fterrors.h
include/freetype/config/: integer-types.h
include/xcb/: dri3.h  randr.h
include_gen/: egl-so_wrap.h  fontconfig-so_wrap.h  freetype-so_wrap.h  wayland_client-so_wrap.h  wayland_cursor-so_wrap.h  wayland_egl-so_wrap.h  xcb-so_wrap.h  xcb_icccm-so_wrap.h  xcb_image-so_wrap.h  xcb_keysyms-so_wrap.h  xcb_randr-so_wrap.h  xcb_render-so_wrap.h  xcb_render_util-so_wrap.h  xcb_shape-so_wrap.h  xcb_shm-so_wrap.h  xcb_sync-so_wrap.h  xcb_xfixes-so_wrap.h  xcb_xinerama-so_wrap.h  xcb_xkb-so_wrap.h  xkbcommon-so_wrap.h  xkbcommon_x11-so_wrap.h
scripts/: collector.py  gen.py  generate-wrapper.py  make-archive.py
src_gen/: CMakeLists.txt  egl-so_wrap.c  fontconfig-so_wrap.c  freetype-so_wrap.c  wayland_client-so_wrap.c  wayland_cursor-so_wrap.c  wayland_egl-so_wrap.c  xcb-so_wrap.c  xcb_icccm-so_wrap.c  xcb_image-so_wrap.c  xcb_keysyms-so_wrap.c  xcb_randr-so_wrap.c  xcb_render-so_wrap.c  xcb_render_util-so_wrap.c  xcb_shape-so_wrap.c  xcb_shm-so_wrap.c  xcb_sync-so_wrap.c  xcb_xfixes-so_wrap.c  xcb_xinerama-so_wrap.c  xcb_xkb-so_wrap.c  xkbcommon-so_wrap.c  xkbcommon_x11-so_wrap.c
